; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_group.c_group_kill_peer_send.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_group.c_group_kill_peer_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GROUP_MESSAGE_KILL_PEER_LENGTH = common dso_local global i32 0, align 4
@GROUP_MESSAGE_KILL_PEER_ID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32)* @group_kill_peer_send to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @group_kill_peer_send(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* @GROUP_MESSAGE_KILL_PEER_LENGTH, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %8, align 8
  %14 = alloca i32, i64 %12, align 16
  store i64 %12, i64* %9, align 8
  %15 = load i32, i32* %7, align 4
  %16 = call i32 @htons(i32 %15)
  store i32 %16, i32* %7, align 4
  %17 = call i32 @memcpy(i32* %14, i32* %7, i32 4)
  %18 = load i32*, i32** %5, align 8
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* @GROUP_MESSAGE_KILL_PEER_ID, align 4
  %21 = mul nuw i64 4, %12
  %22 = trunc i64 %21 to i32
  %23 = call i64 @send_message_group(i32* %18, i32 %19, i32 %20, i32* %14, i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  store i32 1, i32* %10, align 4
  br label %27

26:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  store i32 1, i32* %10, align 4
  br label %27

27:                                               ; preds = %26, %25
  %28 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %28)
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @htons(i32) #2

declare dso_local i32 @memcpy(i32*, i32*, i32) #2

declare dso_local i64 @send_message_group(i32*, i32, i32, i32*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
